@@ -7,6 +7,7 @@ version 0.66:
 	* The Remote Control plugin no longer adds duplicate groups to your
 	  buddy list.
 	* Servers and ports are now imported correctly in MSN.
+	* Core/UI split the core initialization and shutdown.
 
 version 0.65 (07/16/2003):
 	* French translation updated (Eric (Zongo) Boumaour)
